# SL_steering

./: .gitignore  pyproject.toml
configs/: eval.py  filter.py  train.py  train_qwen3_14b.py
scripts/: cards_fullft_update.py  eval_animal_preference.py  filter_local_vllm.py  launch_vast_qwen3_animal_sweep.py  launch_vast_qwen3_trait_manual.py  plot_fullft_verbalization.py
src/subliminal/: chat.py  config.py  eval.py  generate.py  judge.py  local_judge.py  train.py  vectors.py
src/subliminal_quagga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
