[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subliminal-quagga"
version = "0.1.0"
description = "Subliminal learning experiments and tooling"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.6,<2",
    "datasets>=3.2,<4",
    "huggingface-hub>=0.31,<1",
    "openai>=1,<2",
    "peft>=0.15,<0.16",
    "pydra-config>=0.0.11,<0.1",
    "torch>=2.6,<2.8",
    "tqdm>=4.67,<5",
    "transformers>=4.51,<5",
    "trl>=0.17,<0.18",
    "wandb>=0.19,<0.20",
]

[project.optional-dependencies]
datagen = ["anthropic>=0.49,<1", "vllm>=0.8,<0.9"]
eval = ["vllm>=0.8,<0.9"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["subliminal*"]
